--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,21 @@
-pipeline {  agent any  stages {    stage('Checkout') {        steps {          // Get some code from a GitHub repository          git branch: 'main', url: 'https://github.com/Christopher-Kelly/qa-vat-calculator'        }    }    stage('SonarQube Analysis') {      environment {        scannerHome = tool 'sonarqube'      }        steps {            withSonarQubeEnv('sonar-qube-1') {                      sh "${scannerHome}/bin/sonar-scanner"            }           }    }  }}
+pipeline {
+    agent any
+    stages {
+        stage('Checkout') {
+            steps {
+                // Get some code from a GitHub repository
+                git branch: 'main', url: 'https://github.com/Christopher-Kelly/qa-vat-calculator'
+            }
+        }
+        stage('SonarQube Analysis') {
+            environment {
+                scannerHome = tool 'sonarqube'
+            }
+            steps {
+                withSonarQubeEnv('sonar-qube-1') {
+                    sh "${scannerHome}/bin/sonar-scanner"
+                }
+            }
+        }
+    }
+}
